Update example for using DS SDK 3.0.0. 'create_private_key_temp_file' and related methods are removed since no need anymore.

--- a/ds_config.ini
+++ b/ds_config.ini
@@ -16,11 +16,11 @@ DS_SIGNER_EMAIL={USER_EMAIL}
 # Signer name
 DS_SIGNER_NAME={USER_FULLNAME}
 
-# Carbon copy email
-DS_CC_EMAIL={USER_EMAIL}
+# The email address for the envelope's cc recipient.
+DS_CC_EMAIL={CC_EMAIL}
 
-# Carbon copy name
-DS_CC_NAME=Pat Weathers
+# The name of the envelope's cc recipient.
+DS_CC_NAME={CC_FULLNAME}
 
 # The DS Authentication server
 DS_AUTH_SERVER=https://account-d.docusign.com
